feat: add animations

--- a/patterns/drive-homepage/index.html
+++ b/patterns/drive-homepage/index.html
@@ -17,18 +17,18 @@
           <img src="../../public/assets/hero.webp" alt="Porsche Taycan seen from above"/>
       </div>
       <div class="hero__header">
-        <p-display theme="dark" align="center" size="small" tag="h1" id="hero-heading">Ungebunden Porsche fahren auf Abruf.</p-display>
+        <p-display data-animation="fade-in-up" theme="dark" align="center" size="small" tag="h1" id="hero-heading">Ungebunden Porsche fahren auf Abruf.</p-display>
         <div class="steps">
-          <div class="steps__item">
+          <div class="steps__item" data-animation="fade-in-up">
             <span>Mietstation auswählen</span>
           </div>
-          <div class="steps__item">
+          <div class="steps__item" data-animation="fade-in-up">
             <span>Porsche auswählen</span>
           </div>
-          <div class="steps__item">
+          <div class="steps__item" data-animation="fade-in-up">
             <span>Zeitraum auswählen</span>
           </div>
-          <div class="steps__item">
+          <div class="steps__item" data-animation="fade-in-up">
             <span>Abholen und losfahren</span>
           </div>
         </div>
@@ -138,7 +138,7 @@
     </section>
 
     <section class="rent -p-mt-xxl-fluid" aria-labelledby="rent">
-      <div class="rent__cta">
+      <div class="rent__cta" data-animation="fade-in-up">
         <p-text size="medium" color="contrast-high" align="center">Flexible Mietoptionen ermöglichen eine große Auswahl an Modellen und unbegrenzte Freikilometer. Genießen Sie erstklassigen Service, umfassenden Versicherungsschutz und maximale Freiheit ohne langfristige Bindungen.</p-text>
         <p-button id="rent">Jetzt Fahrzeug reservieren</p-button>
       </div>
@@ -198,7 +198,7 @@
     </section>
 
     <section class="partner -p-mt-xxl-fluid" aria-label="Porsche & Europcar am Flughafen">
-      <p-link-tile href="https://porsche.com" weight="regular" aspect-ratio="{ base: '3/4', xs: '4/3', s: '16/9' }" label="Mehr erfahren" description="Porsche und Europcar bieten Ihnen maximale Flexibilität am Airport – mit dem unverwechselbaren Porsche Flair.">
+      <p-link-tile data-animation="tile-fade-in-up" href="https://porsche.com" weight="regular" aspect-ratio="{ base: '3/4', xs: '4/3', s: '16/9' }" label="Mehr erfahren" description="Porsche und Europcar bieten Ihnen maximale Flexibilität am Airport – mit dem unverwechselbaren Porsche Flair.">
         <img src="../../public/assets/eurocar.webp" alt="Porsche 911 from the side driving on the street">
       </p-link-tile>
     </section>
@@ -206,7 +206,7 @@
     <section class="benefits -p-mt-xxl-fluid" aria-labelledby="benefits">
       <p-heading size="large" tag="h2" id="benefits">Warum Porsche Drive?</p-heading>
       <div class="benefits__item">
-        <div class="mood">
+        <div class="mood" data-animation="fade-in-up">
           <img srcset="assets/partner-teaser@2x.webp 2x" src="../../public/assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
         </div>
         <div class="text">
@@ -215,7 +215,7 @@
         </div>
       </div>
       <div class="benefits__item">
-        <div class="mood">
+        <div class="mood" data-animation="fade-in-up">
           <img srcset="assets/partner-teaser@2x.webp 2x" src="../../public/assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
         </div>
         <div class="text">
@@ -224,7 +224,7 @@
         </div>
       </div>
       <div class="benefits__item">
-        <div class="mood">
+        <div class="mood" data-animation="fade-in-up">
           <img srcset="assets/partner-teaser@2x.webp 2x" src="../../public/assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
         </div>
         <div class="text">
@@ -233,7 +233,7 @@
         </div>
       </div>
       <div class="benefits__item">
-        <div class="mood">
+        <div class="mood" data-animation="fade-in-up">
           <img srcset="assets/partner-teaser@2x.webp 2x" src="../../public/assets/partner-teaser.webp" width="1308" height="736" alt="Some alternative text for screen readers describing the image">
         </div>
         <div class="text">
@@ -246,19 +246,19 @@
     <section class="drive-steps" aria-labelledby="drive-steps">
       <p-heading size="large" tag="h2" id="drive-steps" align="center">So funktioniert Porsche Drive</p-heading>
       <div class="drive-steps__container">
-        <div class="drive-steps__step">
+        <div class="drive-steps__step" data-animation="fade-in-up">
           <p-icon name="pin" size="large" aria="{ 'aria-label': 'Pin icon' }"></p-icon>
           <p-text align="center">Mietstation wählen</p-text>
         </div>
-        <div class="drive-steps__step">
+        <div class="drive-steps__step" data-animation="fade-in-up">
           <p-icon name="car" size="large" aria="{ 'aria-label': 'Car icon' }"></p-icon>
           <p-text align="center">Porsche auswählen</p-text>
         </div>
-        <div class="drive-steps__step">
+        <div class="drive-steps__step" data-animation="fade-in-up">
           <p-icon name="calendar" size="large" aria="{ 'aria-label': 'Calendar icon' }"></p-icon>
           <p-text align="center">Zeitraum wählen</p-text>
         </div>
-        <div class="drive-steps__step">
+        <div class="drive-steps__step" data-animation="fade-in-up">
           <p-icon name="steering-wheel" size="large" aria="{ 'aria-label': 'Steering wheel icon' }"></p-icon>
           <p-text align="center">Fahrzeug abholen</p-text>
         </div>
@@ -266,7 +266,7 @@
     </section>
 
     <section class="voucher -p-mt-xxl-fluid" aria-label="Gutschein kaufen">
-      <p-link-tile href="https://porsche.com" weight="regular" aspect-ratio="{ base: '3/4', xs: '3/4', s: '16/9' }" label="Gutschein kaufen" description="Das schönste Geschenk? Fahrfreude. Verschenken Sie einen Gutschein und machen Sie den Traum vom Porsche fahren wahr.">
+      <p-link-tile data-animation="tile-fade-in-up" href="https://porsche.com" weight="regular" aspect-ratio="{ base: '3/4', xs: '3/4', s: '16/9' }" label="Gutschein kaufen" description="Das schönste Geschenk? Fahrfreude. Verschenken Sie einen Gutschein und machen Sie den Traum vom Porsche fahren wahr.">
         <img src="../../public/assets/voucher.webp" alt="Two people opening an envelope with a voucher inside">
       </p-link-tile>
     </section>
@@ -274,19 +274,19 @@
     <section class="requirements -p-mt-xxl-fluid" id="requirements" aria-labelledby="requirement">
       <p-heading size="large" tag="h2" id="requirement" align="center">Anforderungen</p-heading>
       <div class="requirements__container">
-        <div class="requirements__box">
+        <div class="requirements__box" data-animation="fade-in-up">
           <p-icon name="user" size="large" aria="{ 'aria-label': 'User icon' }"></p-icon>
           <p-text align="center">Mindestalter: 25 Jahre (35 Jahre für Turbo-, GT - oder Klassik-Modelle).</p-text>
         </div>
-        <div class="requirements__box">
+        <div class="requirements__box" data-animation="fade-in-up">
           <p-icon name="calendar" size="large" aria="{ 'aria-label': 'Calendar icon' }"></p-icon>
           <p-text align="center">Ein gültiger Führerschein ist seit mindestens fünf Jahren erforderlich.</p-text>
         </div>
-        <div class="requirements__box">
+        <div class="requirements__box" data-animation="fade-in-up">
           <p-icon name="card" size="large" aria="{ 'aria-label': 'Card icon' }"></p-icon>
           <p-text align="center">Eine Kaution von 2.500 € (5.000 € für Turbo-, GT- oder Klassik-Modelle) ist erforderlich.</p-text>
         </div>
-        <div class="requirements__box">
+        <div class="requirements__box" data-animation="fade-in-up">
           <p-icon name="purchase" size="large" aria="{ 'aria-label': 'Purchase icon' }"></p-icon>
           <p-text align="center">Zahlung nur mit Kreditkarte, Mindestgültigkeit von 3 Monaten.</p-text>
         </div>
