feat: re-work co-driver template | sas

--- a/patterns/co-driver/index.html
+++ b/patterns/co-driver/index.html
@@ -218,7 +218,7 @@
 
   <template id="template-intro">
     <div class="intro -mt-fluid-medium">
-      <img class="intro__image" src="assets/co-driver.webp" width="384" height="384" alt="Co-Driver logo" />
+      <img class="intro__image" src="https://porsche-design-system.github.io/dummyasset/co-driver.webp" width="384" height="384" alt="Co-Driver logo" />
       <div class="intro__text">
         <p-display size="small" align="center" tag="h1">Good morning,<br />how can I help you?</p-display>
       </div>
@@ -244,7 +244,7 @@
     <div class="chat">
       <p-text class="chat__bubble chat__bubble--question">What's the latest Porsche model?</p-text>
       <div class="chat__bubble chat__bubble--answer">
-        <img src="assets/co-driver.webp" width="384" height="384" alt="Co-Driver logo" />
+        <img src="https://porsche-design-system.github.io/dummyasset/co-driver.webp" width="384" height="384" alt="Co-Driver logo" />
         <div>
           <p-text
           >The latest Porsche model is the 2024 Porsche 718 Spyder RS. This car represents the pinnacle of
@@ -292,7 +292,7 @@
         </div>
       </div>
       <div class="chat__bubble chat__bubble--answer">
-        <img src="assets/co-driver.webp" width="384" height="384" alt="Co-Driver logo" />
+        <img src="https://porsche-design-system.github.io/dummyasset/co-driver.webp" width="384" height="384" alt="Co-Driver logo" />
         <div>
           <p-text
           >Since 1931, Porsche has been synonymous with automotive excellence. From the iconic 911 to the electric
