feat: add drive voucher page

--- a/patterns/drive-voucher/index.html
+++ b/patterns/drive-voucher/index.html
@@ -22,14 +22,16 @@
       </div>
     </section>
 
-    <section class="order">
-      <div class="order__heading">
-        <p-heading size="large" theme="dark">Gutscheinbetrag</p-heading>
-        <p-text size="small" color="contrast-medium" theme="dark">Der Betrag wird dem Porsche Geschenkgutschein hinzugefügt.</p-text>
-      </div>
+    <section class="order" aria-labelledby="order-button">
+      <div class="order__section">
+        <div>
+          <p-heading size="large" theme="dark">Gutscheinbetrag</p-heading>
+          <p-text size="small" color="contrast-medium" theme="dark">Der Betrag wird dem Porsche Geschenkgutschein hinzugefügt.</p-text>
+        </div>
         <div class="voucher box">
           <div class="voucher__selects">
-            <p-select theme="dark" name="voucher-car" label="Model" value="718_boxster" required>
+            <p-select theme="dark" name="voucher-car" label="Model" value="">
+              <p-select-option value="">Modell auswählen</p-select-option>
               <p-select-option value="718_boxster">
                 <img src="/assets/718_boxster.webp" />
                 718 Boxter
@@ -63,13 +65,14 @@
                 Cayenne
               </p-select-option>
             </p-select>
-            <p-select theme="dark" name="voucher-rate" label="Tarif (Stand 10/2024)" value="1" required>
-              <p-select-option value="1">1 Tag / 349 €</p-select-option>
-              <p-select-option value="2">2 Tage / 642 €</p-select-option>
-              <p-select-option value="3">3 Tage / 864 €</p-select-option>
-              <p-select-option value="4">4 Tage / 1012 €</p-select-option>
-              <p-select-option value="5">5 Tage / 1.265 €</p-select-option>
-              <p-select-option value="6">6 Tage / 1.518 €</p-select-option>
+            <p-select theme="dark" name="voucher-rate" label="Tarif (Stand 10/2024)" value="" disabled>
+              <p-select-option value="">Tarif auswählen</p-select-option>
+              <p-select-option value="349">1 Tag / 349 €</p-select-option>
+              <p-select-option value="642">2 Tage / 642 €</p-select-option>
+              <p-select-option value="864">3 Tage / 864 €</p-select-option>
+              <p-select-option value="1012">4 Tage / 1012 €</p-select-option>
+              <p-select-option value="1265">5 Tage / 1.265 €</p-select-option>
+              <p-select-option value="1518">6 Tage / 1.518 €</p-select-option>
             </p-select>
           </div>
           <div class="voucher__amount">
@@ -80,10 +83,63 @@
             </div>
             <p-text size="x-small" align="center" color="contrast-low" theme="dark">Mindestbetrag 30.00€</p-text>
           </div>
+        </div>
+      </div>
+      <div class="order__section">
+        <div>
+          <p-heading size="large" theme="dark">Personalisierung</p-heading>
+          <p-text size="small" color="contrast-medium" theme="dark">Fügen Sie eine optionale Nachricht zum Geschenkgutschein hinzu. Hier finden Sie ein <a href="/">Beispiel</a></p-text>
+        </div>
+        <div class="box">
+          <p-text-field-wrapper theme="dark" label="Ansprache">
+            <input type="text" name="speech" placeholder="z.B. Happy Birthday" maxlength="70" />
+          </p-text-field-wrapper>
+          <p-textarea theme="dark" name="message" label="Persönliche Nachricht" placeholder="Ich möchte dir dieses besondere Erlebnis schenken." max-length="248"></p-textarea>
+        </div>
+      </div>
+      <div class="order__section">
+        <div class="condition">
+          <p-icon name="check" aria="{ 'aria-label': 'Check icon' }" theme="dark"></p-icon><p-text theme="dark">Der Gutschein wird direkt nach dem Kauf per E-Mail als PDF versendet.</p-text>
+        </div>
+        <div class="condition">
+          <p-icon name="check" aria="{ 'aria-label': 'Check icon' }" theme="dark"></p-icon><p-text theme="dark">Der Fahrer muss die Mindestanforderungen erfüllen.</p-text>
+        </div>
+        <div class="condition">
+          <p-icon name="check" aria="{ 'aria-label': 'Check icon' }" theme="dark"></p-icon><p-text theme="dark">Gutscheine sind an allen Porsche Drive Rental Standorten in Deutschland einlösbar.</p-text>
+        </div>
+        <div class="condition">
+          <p-icon name="check" aria="{ 'aria-label': 'Check icon' }" theme="dark"></p-icon><p-text theme="dark">Der Gutschein ist drei Jahre ab Ende des Kalenderjahres gültig.</p-text>
+        </div>
+      </div>
+      <div class="order__section submit">
+        <p-button theme="dark" id="order-button">Gutschein bestellen</p-button>
+        <a href="/">Mehr Erfahren</a>
       </div>
     </section>
 
+    <section class="redeem" aria-labelledby="redeem-heading">
+      <p-heading size="large" tag="h2" id="redeem-heading" align="center">Gutschein einlösen</p-heading>
+      <div class="redeem__container">
+        <div class="redeem__step" data-animation="fade-in-up">
+          <p-icon name="car" size="large" aria="{ 'aria-label': 'Car icon' }"></p-icon>
+          <p-text align="center">Wunschfahrzeug einfach<br />online reservieren</p-text>
+        </div>
+        <div class="redeem__step" data-animation="fade-in-up">
+          <p-icon name="purchase" size="large" aria="{ 'aria-label': 'Purchase icon' }"></p-icon>
+          <p-text align="center">Gutscheincode bei<br />Fahrantritt angeben</p-text>
+        </div>
+        <div class="redeem__step" data-animation="fade-in-up">
+          <p-icon name="refresh" size="large" aria="{ 'aria-label': 'Refresh icon' }"></p-icon>
+          <p-text align="center">Restguthaben für spätere<br />Buchungen verwenden</p-text>
+        </div>
+      </div>
+    </section>
 
+    <section class="fuel" aria-labelledby="fuel-heading">
+      <p-heading size="large" tag="h2" id="fuel-heading" align="center">Kraftstoffverbrauch</p-heading>
+      <p-text size="xx-small" align="center" color="contrast-medium">Fuel consumption and CO? emissions are determined according to the W. TP test cycle. The energy or fuel consumption values and CO? emissions for each model are as. follows: Taycan: 20 - 16 7 kWh/100 km (Class A) Macan BFV: 21.1 - 17.9 kWh/100 km (Class A) 718 Boxster: 9 7 - 8 9 |/ 100 km. 220 - 201 g/km (Class G) 718.
+        Cayman: 9 7 - 8 9 1/100 km 220 - 201 g/km (Class G) 911 Coupé: 10.8 - 10.3 |/100 km 245 - 233 g/km (Class G) 911 Cabriolet: 10.8 - 10.4 |/100 km 245 - 236 g/ km (Class G) 911 Targa: 10 9 - 10.5 |/100 km 247 - 238 g/km (Class G) 911 Turbo Coupé: 12.3 - 12 |/100 km 279 - 271 g/km (Class G), 911 Turho Convertible: 12 5 - 12 1 // 100 km. 284 - 275 g/km (Class G) 911 GT3 RS: 134 I/100 km. 305 g/km (Class G) Panamera: 10.5 - 9 7 // 100 km 239 - 219 g/km (Class G). Macan: 10 7 - 10 1//100 km 243 - 228 g/km (Class G) Cavenne: 12 1 - 10.9 |/100 km 275 - 247 a/km (Class G) Please note that actual consumption and emissions may vary based. on driving conditions and other factors.</p-text>
+    </section>
 
   </main>
   <footer class="footer">
